--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,15 @@
 # Theme config.
-homepage = "http:/localhost:1313/"
+languageCode = 'en-us'
+title = "lbenicio"
+contentdir = "content"
 
-title = "test"
-description = "Leonardo Benicio personal blog"
 
-github = "lbenicio"
-twitter = "lbenicio_"
+[params]
+    github = "lbenicio"
+    twitter = "lbenicio_"
+    linkedin = "leonardo-benicio-1a55a1ba"
+    mastodon = "lbenicio"
+    description = "Leonardo Benicio personal blog"
+    homepage = "http://localhost:1313/"
+    home = "/"
+    blog = "https://blog.lbenicio.dev"
