--- a/theme.toml
+++ b/theme.toml
@@ -1,8 +1,5 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "Theme"
-license = "MIT"
+name = "lbenicio-minimal"
+license = "GPLv3"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
 homepage = "http://example.com/"
